# evanalyzer

./: .gitignore  Cargo.toml  README.md  TODO
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
crates/app/: Cargo.toml
crates/app/src/: extensions.rs  frontend.rs  lib.rs  project_owner.rs  results.rs  templates.rs
crates/app/src/extensions/: classification_ext.rs  images_ext.rs  project_ext.rs  roi_ext.rs  utils.rs
crates/app/src/results/: results_exporter.rs  results_loader.rs
crates/app/src/templates/: pipeline_templates.rs
crates/cfg/: Cargo.toml  build.rs
crates/cfg/src/: lib.rs  modules.rs  types.rs  utils.rs
crates/cfg/src/modules/: classification_settings.rs  experimant_meta_settings.rs  images_settings.rs  meta_data.rs  parameter_def.rs  pipeline_command.rs  pipeline_command_settings.rs  pipeline_settings.rs  plate_settings.rs  project_settings.rs  roi_settings.rs  templates.rs
crates/cfg/src/types/: classes.rs  errors.rs  ids.rs  macros.rs  units.rs
crates/cfg/src/utils/: hex_colors.rs
crates/core/: Cargo.toml  build.rs
crates/core/java/src/: BioFormatsWrapper.java
crates/core/macros/: Cargo.toml
crates/core/macros/src/: lib.rs
crates/core/src/: algos.rs  converters.rs  image.rs  init.rs  job.rs  lib.rs  pipeline.rs  roi.rs  storage.rs
crates/core/src/algos/: classification.rs  filters.rs  math.rs  morphology.rs  segmentation.rs  spartial_transform.rs
crates/core/src/algos/classification/: classify_rois.rs  coloc_rois.rs  extract_rois.rs  voronoi.rs
crates/core/src/algos/filters/: blur.rs  blur_gaussian.rs  color_filter.rs  edge_detection_canny.rs  edge_detection_sobel.rs  enhance_contrast.rs  hessian.rs  intensity_transform.rs  laplacian.rs  rank_filter.rs  rolling_ball.rs  structure_tensor.rs  weighted_deviation.rs
crates/core/src/algos/math/: image_cache.rs  image_math.rs  median_subtract.rs  save_image.rs
crates/core/src/algos/morphology/: morphological_transformation.rs
crates/core/src/algos/segmentation/: connected_components.rs  threshold.rs  watershed.rs
crates/core/src/algos/spartial_transform/: edm.rs
crates/core/src/extlibs/: mod.rs
crates/core/src/extlibs/libmorphology/: mod.rs  morph_ops.rs
crates/core/src/image/: image_container.rs  image_debug.rs  image_meta.rs  image_ome_parser.rs  image_reader.rs  java.rs
crates/core/src/job/: algos_from_config.rs  job_executor.rs  job_generator.rs
crates/core/src/pipeline/: pipeline.rs  pipeline_cache.rs  pipeline_context.rs
crates/core/src/storage/: duckdb.rs  file.rs  memory.rs
crates/core/tests/: slice_Z0_C0_T0.raw  slice_Z0_C0_T0.tif  slice_Z0_C0_T0_avg_intensity.raw  slice_Z0_C0_T0_max_intensity.raw  slice_Z0_C0_T0_median_intensity.raw  slice_Z0_C0_T0_min_intensity.raw  slice_Z0_C0_T0_stddev_intensity.raw  slice_Z0_C0_T0_sum_intensity.raw  slice_Z0_C0_T1.tif  slice_Z0_C0_T2.tif  slice_Z0_C0_T3.tif  slice_Z0_C0_T4.tif  slice_Z0_C0_T5.tif  slice_Z0_C0_T6.tif  slice_Z1_C0_T0.raw  slice_Z1_C0_T0.tif  slice_Z1_C0_T1.tif  slice_Z1_C0_T2.tif  slice_Z1_C0_T3.tif  slice_Z1_C0_T4.tif  slice_Z1_C0_T5.tif  slice_Z1_C0_T6.tif  slice_Z2_C0_T0.tif  slice_Z2_C0_T1.tif  slice_Z2_C0_T2.tif  slice_Z2_C0_T3.tif  slice_Z2_C0_T4.tif  slice_Z2_C0_T5.tif  slice_Z2_C0_T6.tif  slice_Z3_C0_T0.tif  slice_Z3_C0_T1.tif  slice_Z3_C0_T2.tif  slice_Z3_C0_T3.tif  slice_Z3_C0_T4.tif  slice_Z3_C0_T5.tif  slice_Z3_C0_T6.tif  slice_Z4_C0_T0.tif  slice_Z4_C0_T1.tif  slice_Z4_C0_T2.tif  slice_Z4_C0_T3.tif  (+3 more)
crates/gui/: Cargo.toml
crates/gui/src/: editor.rs  helper.rs  lib.rs  prelude.rs
crates/gui/src/editor/: classification_controller.rs  histogram_controller.rs  image_meta_controller.rs  images_list_controller.rs  pipeline_task.rs  pipeline_worker.rs  pipelines_controller.rs  project_controller.rs  project_settings_controller.rs  results_list_controller.rs  results_table_controller.rs  roi_list_controller.rs  template_controller.rs  viewport_cache.rs  viewport_controller.rs  viewport_image_controller.rs  viewport_roi_controller.rs  viewport_task.rs  viewport_worker.rs
crates/gui/src/helper/: color_generators.rs  size_formater.rs
crates/gui/ui/: Cargo.toml  build.rs  main.slint  menu_bar.slint  sidebar_left.slint  sidebar_right.slint  state.slint  status_bar.slint  style.slint  toolbar.slint
crates/gui/ui/components/: app_button.slint  bio_runner.slint  custom_line_edit.slint  divider.slint  meta_item.slint  navicon_left.slint  navicon_right.slint  series_combobox.slint  toggle_button.slint  tool_button.slint
crates/gui/ui/dialogs/: about.slint  classification_class_edit_dialog.slint  classification_confirm_auto_add_dialog.slint  classification_confirm_delete.slint  command_selection_dialog.slint  dialog_base.slint  images_missing_dialog.slint  pipeline_edit_dialog.slint  pipeline_running_dialog.slint  preview_rendering_dialog.slint  project_settings_dialog.slint  project_template_dialog.slint  roi_list_confirm_delete_dialog.slint  template_meta_dialog.slint  warning_dialog.slint
crates/gui/ui/editor/: classification_panel.slint  histogram_panel.slint  image_control_panel.slint  image_meta_panel.slint  images_list_panel.slint  pipelines_panel.slint  results_list_panel.slint  roi_list_panel.slint  viewport.slint  viewport_navigator.slint  viewport_scalebar.slint  viewport_state.slint
crates/gui/ui/editor/pipeline/: pipeline_sidebar.slint
crates/gui/ui/results/: results_table.slint  results_window.slint
docs/: project.schema.json
templates/: cell_area_brightfield.evapipe  cell_uptake_2_channel_coloc.evapt  cell_uptake_3_channel_coloc.evapt  cell_uptake_methods_cell_biology.evapt  coloc_2_channel.evapt  (+6 more)
(+6 files in other folders)
